objects/Media_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Media_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Discount</label>
        <referenceTo>Media_Discount__c</referenceTo>
        <relationshipLabel>Media Order Items</relationshipLabel>
        <relationshipName>Media_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Order__c</fullName>
        <label>Media Order</label>
        <referenceTo>Media_Order__c</referenceTo>
        <relationshipLabel>Media Order Items</relationshipLabel>
        <relationshipName>Media_Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Media_Product__c</fullName>
        <label>Media Product</label>
        <referenceTo>Media_Product__c</referenceTo>
        <relationshipLabel>Media Order Items</relationshipLabel>
        <relationshipName>Media_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Media Order Item</label>
    <nameField>
        <displayFormat>ORDER_I-{0000000}</displayFormat>
        <label>Media Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>